--- a/VRChat/67/1075667.html
+++ b/VRChat/67/1075667.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "ElAr1Lflfd0WbKFCbYAxlJi+YsU7Bz3YWqs7cKjUJ/8="></script>
+    "i7VOMJvAb2cv6ZpPI4w9qlqNa0DMnuridVhWp5nTUgE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"フレキシブルステッキ","description":"ぷるぷるするステッキの3Dモデルです。\nVRChatのアバターの頭に髪飾りとして付けるために作成しました。(嘘)\n改変、商用等、自由にご利用いただけます。","url":"https://booth.pm/ja/items/1075667","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/61e4610c-2d48-4d4b-b8e1-76e0985b5de8/i/1075667/f3ee01e6-5a69-40a2-a368-cf8ae2521452_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ElAr1Lflfd0WbKFCbYAxlJi+YsU7Bz3YWqs7cKjUJ/8="></script>
+    nonce="i7VOMJvAb2cv6ZpPI4w9qlqNa0DMnuridVhWp5nTUgE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -156,7 +156,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               フレキシブルステッキ
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -192,6 +192,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -266,9 +268,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
