--- a/VRChat/81/1335181.html
+++ b/VRChat/81/1335181.html
@@ -78,9 +78,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "iYLen/imrdqTpqyp6LPX8DnFwc5W9r9vmO6+Rtq7PJc="></script>
+    "5zjqvhcH7SEX6mN2qxFUBC4rq5L4MPlWpryycumTxVk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"椅子　VRChat向け","description":"椅子です\n\n自由に使って下さい\n\n何かあったら言って下さい","url":"https://booth.pm/ja/items/1335181","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/105da28d-be76-43fa-a3e1-17f0f84704fd/i/1335181/3ba2021d-fdb9-4ed6-be23-c3ec3a68b4bc_base_resized.jpg"}
     </script>
@@ -94,7 +94,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="iYLen/imrdqTpqyp6LPX8DnFwc5W9r9vmO6+Rtq7PJc="></script>
+    nonce="5zjqvhcH7SEX6mN2qxFUBC4rq5L4MPlWpryycumTxVk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -147,7 +147,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               椅子　VRChat向け
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -183,6 +183,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -344,9 +346,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
