--- a/VRChat/33/1334533.html
+++ b/VRChat/33/1334533.html
@@ -105,9 +105,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "v/gk7oB9jvanBEYS8b7sd1Df88WRgX7ccIoBiUiIQ0Y="></script>
+    "pSIqlfp0CFzrTaWB0H8s4X5zwegYLyeazLZDBoYy3G4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRchat向け『仕込みブレード』392ポリゴン ☆2種追加しました","description":"更新履歴\n\n4/29　仕込みブレードのバリエーションを2種追加しました。\n\n-----------------\n\n\n『袖の中に隠せるほど小さく、両手を使うこともなく切り裂くことのできる武器があるとすれば最高の暗殺者になれることでしょう。この仕込みブレードは遥か昔から時代の闇の中で使い続けられてきたものを参考に作られました。なお、ブレードを展開した際に自身の指を切ってしまうという評価が多数届いているため、あらかじめ薬指を切断しておくことをオススメします。』\n\n\n-----------------\n\n\n\nこの度はUltraGunsAtomicのモデルをご覧いただき誠にありがとうございます。\nこちらのモデルは主にVRchat向けに制作されております。それ以外の利用については想定されておりません。\n\n\n\n-----------------\n\n\n\n『内容物』\n\n\n・fbxモデル\n仕込みブレード 392ポリゴン\nシェイプキーでブレードの展開と、ブレード幅の調整が可能です。\n腕の下に取り付けることを想定して作られているため、初めからひっくり返っています。\n\n\n・unitypackage\nこちらをunityにドラッグ\u0026ドロップするだけで導入できます。\nunityに導入するとフォルダ内にテクスチャ、FBX、設定済みマテリアル、設定済みプレハブ、サンプルアニメーションが入っています。\nサンプルアニメーションはアバターに仕込んだ際のブレードの展開の参考にお使いください。\n\n-----------------\n\n\n\n『利用規約』\n\n\n\n【許可】\n\n・VRchat内での使用(アバターに持たせる・ワールドのオブジェクト・VRchatのゲームに組み込む等)\n\n・データ、モデルの改変(なお、改変されたモデルにも本規約は適応されます。)\n\n・動画制作(営利・非営利は問いませんが、一報頂けると嬉しいです。)\n\n・R-18、R-18Gの利用\n\n・イラストなどへの参考、トレス等への利用。\n\n・利用者自身が使用できる形で本モデルが使用されたアバターのVRchat内へのアップロード（本モデルが使用されたアバターペデスタルへのアップロードは許可します）\n\n\n-----------------\n\n\n\n【禁止】\n\n・名誉棄損、法律に反する反社会的行為、悪意を持った差別的な意図で本モデルを使用。\n\n・自作発言（本モデルを改変し利用している等の発言は問題ありません）\n\n・本モデルの無許可の再配布、販売（改変したモデル含む）\n\n・このモデルを使用した嫌がらせ行為（嫌がる相手に斬りかかる等）\n\n\nなお、禁止事項に違反した場合、制作者はいつでも利用を差し止めできるものとします。\n\n\n\n-----------------\n\n\n\n【注意】\nこのモデルはVRchatでの使用を想定しています。それ以外での使用により発生した障害、事故、トラブルについては一切の責任を負えません。\nまた、このモデルに関していかなる保証も行いません。\nまた、このモデルを使用しVRchat内で発生したトラブル、障害、事故についても一切責任を負えません。\n\nこのモデルを利用した時点で以上の規約に同意することとなりますので、今一度しっかりと目をお通し下さい。\n\n\n\n-----------------\n\n\n\n本規約、本データについて分からないことや疑問、違和感や不具合などがございましたらお気軽にご連絡ください。\n\n\n\nVRchat；UGA_IYU\n\nTwitter；@uga_IYU\n\nbooth；https://ultragunsatomic.booth.pm/\n\nモデル制作者；う゛","url":"https://booth.pm/ja/items/1334533","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/2aaf8e6b-f522-4f3e-818f-90223f1e4947/i/1334533/60f891c6-5637-43f4-82a7-6427548c4f81_base_resized.jpg"}
     </script>
@@ -118,7 +118,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="v/gk7oB9jvanBEYS8b7sd1Df88WRgX7ccIoBiUiIQ0Y="></script>
+    nonce="pSIqlfp0CFzrTaWB0H8s4X5zwegYLyeazLZDBoYy3G4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -177,7 +177,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               VRchat向け『仕込みブレード』392ポリゴン ☆2種追加しました
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -213,6 +213,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -322,9 +324,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
@@ -657,7 +656,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;コミックマーケット102&quot;,&quot;value&quot;:&quot;c102&quot;},{&quot;label&quot;:&quot;コスホリック36&quot;,&quot;value&quot;:&quot;cosholic36&quot;},{&quot;label&quot;:&quot;COMIC CITY TOKYO149&quot;,&quot;value&quot;:&quot;comiccity-tokyo149&quot;},{&quot;label&quot;:&quot;ワンダーフェスティバル 2023[夏]&quot;,&quot;value&quot;:&quot;wonfes2023summer&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230728- &quot;,&quot;value&quot;:&quot;comiccity-online-230728&quot;},{&quot;label&quot;:&quot;I・Doll VOL.68&quot;,&quot;value&quot;:&quot;i-doll68&quot;},{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;}]"
+    "[{&quot;label&quot;:&quot;コミックマーケット102&quot;,&quot;value&quot;:&quot;c102&quot;},{&quot;label&quot;:&quot;コスホリック36&quot;,&quot;value&quot;:&quot;cosholic36&quot;},{&quot;label&quot;:&quot;COMIC CITY TOKYO149&quot;,&quot;value&quot;:&quot;comiccity-tokyo149&quot;},{&quot;label&quot;:&quot;ワンダーフェスティバル 2023[夏]&quot;,&quot;value&quot;:&quot;wonfes2023summer&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230728- &quot;,&quot;value&quot;:&quot;comiccity-online-230728&quot;},{&quot;label&quot;:&quot;I・Doll VOL.68&quot;,&quot;value&quot;:&quot;i-doll68&quot;},{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;acosta!マルシェvol.5&quot;,&quot;value&quot;:&quot;acosta-marche5&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
